add congress view

--- a/src/matem/congresos/skins/matem_congresos/congresos.css
+++ b/src/matem/congresos/skins/matem_congresos/congresos.css
@@ -4,6 +4,24 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(3, minmax(auto, 50%));
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 2rem;
+}
+
+/*  *  900px and below * */
+@media screen and (max-width : 900px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 2rem;
+    }
+}
+
+/*  *  600px and below * */
+@media screen and (max-width : 600px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 1rem;
+    }
 }
